fix scrollbar

--- a/src/components/TradingHistory/styles.module.scss
+++ b/src/components/TradingHistory/styles.module.scss
@@ -56,19 +56,11 @@
 }
 
 .tableWrapper::-webkit-scrollbar-track {
-  background: linear-gradient(
-    0deg,
-    transparent 0%,
-    transparent 20%,
-    rgba(102, 214, 218, 0.4) 20%,
-    rgba(102, 214, 218, 0.4) 80%,
-    transparent 80%,
-    transparent 100%
-  );
+  background: rgba(#bb86fc, 0.2);
 }
 
 .tableWrapper::-webkit-scrollbar-thumb {
-  background: $color-action-default;
+  background: #bb86fc;
 }
 
 .tableWrapper::-webkit-scrollbar:vertical {
@@ -77,17 +69,9 @@
 }
 
 .tableWrapper::-webkit-scrollbar-track:vertical {
-  background: linear-gradient(
-    90deg,
-    transparent 0%,
-    transparent 20%,
-    rgba(102, 214, 218, 0.4) 20%,
-    rgba(102, 214, 218, 0.4) 80%,
-    transparent 80%,
-    transparent 100%
-  );
+  background: rgba(#bb86fc, 0.2);
 }
 
 .tableWrapper::-webkit-scrollbar-thumb:vertical {
-  background: $color-action-default;
+  background: #bb86fc;
 }
